[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rootfall"
version = "0.1.0"
description = "A roguelike for mastering Linux commands and flags."
readme = "README.md"
requires-python = ">=3.9"
# PyYAML is the only third-party dependency. Everything else is standard library.
dependencies = ["PyYAML>=6.0"]

[project.scripts]
rootfall = "rootfall.engine:main"

[tool.setuptools.packages.find]
where = ["src"]
